<resources>
    <string name="app_name">MyAndroidApp</string>

    <string name="name">Bikash Jung Thapa</string>
    <string name="Header">Fun Fact:</string>
    <string name="Details">I love hiking and outdoorsports</string>
    <string name="enter_zip">Enter Zip</string>
    <string name="send_button">Send</string>
    <string name="button1">ZipOne</string>
    <string name="button2">ZipTwo</string>
    <string name="button3">ZipThree</string>
    <string name="button4">ZipFour</string>

</resources>