<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--This is Name-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- this is fun fact header-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/Header"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- fun fact details I created a linera layout since it was hard for me to align it with the design directly -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Details"
            android:textAlignment="viewStart" />


    </LinearLayout>

    <EditText
        android:id="@+id/textView4"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:hint="Enter Zip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="143dp"
        android:layout_height="64dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:onClick="showText"
        android:text="@string/send_button"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <Button
        android:id="@+id/button1"
        android:layout_width="143dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:onClick="showText"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:onClick="showText"
        android:text="@string/button2"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/send_button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:onClick="showText"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />
    <Button
        android:id="@+id/button4"
        android:layout_width="143dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:onClick="showText"
        android:text="@string/button4"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />



    <!-- zip enter-->

    <!-- Info Button -->


</androidx.constraintlayout.widget.ConstraintLayout>